really finished design

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 	</head>	
 
 	<body>
-		<h1>Pomodoro Clock</h1>
+		
 		
 		<div class="container">
-			
+		<h1>Pomodoro Clock</h1>	
 		<div><canvas id="myCanvas" resize="true"></canvas></div>		
-			
+		
+		<div class="sub-container">
 		<div class="setup-section">
 		
 		<div>
@@ -51,7 +52,7 @@
 		<label class="time-session-section">Session: <span>25:00</span> </label>	
 		</div>
 		<div>
-		<label class="time-break-section">Break: <span>25:00</span> </label>	
+		<label class="time-break-section">Break: <span>5:00</span> </label>	
 		</div>	
 			
 	    </div>	
@@ -60,6 +61,7 @@
 		<button class="start-btn">Start!</button>	
 		</div>
 		
+		</div>		
 		</div>
 		
 		
